--- a/src/styles/NftItemDetail.scss
+++ b/src/styles/NftItemDetail.scss
@@ -636,7 +636,7 @@
         display: flex;
         flex-direction: column;
         gap: 12px;
-        margin-top: 20px;
+        // margin-top: 20px;
         dl {
           &.Sold {
             dd {
@@ -756,7 +756,7 @@
         gap: 16px;
         margin-top: 16px;
         .nft-item-detail__song-detail__right__value-box__price {
-          min-height: 156px;
+          min-height: 172px;
           flex: 1;
           border-radius: 12px;
           border: 1px solid var(--secondary-base, #00ffb3);
