영진 수정 - 음향 디자인 수정 완료

--- a/src/styles/EvaluationBegin.scss
+++ b/src/styles/EvaluationBegin.scss
@@ -150,6 +150,7 @@
       transition: 0.3s;
       img {
         width: 100%;
+        max-height: 226px;
       }
       &.active {
         border: 1px solid #cf0;
