--- a/src/components/PlayerHeader.scss
+++ b/src/components/PlayerHeader.scss
@@ -237,7 +237,7 @@
         display: flex;
         align-items: center;
         gap: 4px;
-        color: var(--Text-music-sub, #aaa);
+        color:#aaa;
         font-family: Pretendard400;
         font-size: 12px;
         font-style: normal;
