영진 수정 - 음량 조절 수정

--- a/src/styles/EvaluationStage.scss
+++ b/src/styles/EvaluationStage.scss
@@ -2,6 +2,7 @@
   .evaluation-stage__critics {
     display: flex;
     gap: 16px;
+    overflow: auto;
   }
   .evaluation-stage__critics-item {
     display: flex;
@@ -30,6 +31,7 @@
     color: #aaa;
     font-family: Pretendard500;
     font-size: 12px;
+    text-align: center;
   }
 
   .evaluation-stage__slide {
