--- a/src/styles/Nft.scss
+++ b/src/styles/Nft.scss
@@ -81,6 +81,9 @@
         border: 1px solid #4ee1fb;
       }
     }
+    font{
+      text-align: center;
+    }
   } //.nft__exchange--button--END--
 }
 
