--- a/src/components/modal/SuccessModal.scss
+++ b/src/components/modal/SuccessModal.scss
@@ -10,6 +10,21 @@
     word-break: keep-all;
     font-family: Pretendard400;
     color: #aaa;
+    font{
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+      word-spacing: inherit !important;
+      font-variant: inherit !important;
+      text-transform: inherit !important;
+      text-rendering: inherit !important;
+      -webkit-font-smoothing: inherit !important; 
+      font-style: inherit !important;
+      font-family: inherit !important;
+    }
   }
   .success-modal__button {
     width: 100%;
@@ -21,7 +36,21 @@
     background-color: #cf0;
     color: #1a1a1a;
     font-family:  Pretendard600;
-
+    font{
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+      word-spacing: inherit !important;
+      font-variant: inherit !important;
+      text-transform: inherit !important;
+      text-rendering: inherit !important;
+      -webkit-font-smoothing: inherit !important; 
+      font-style: inherit !important;
+      font-family: inherit !important;
+    }
     &:hover {
       top: 4px;
       &::before {
