--- a/src/components/mypage/nfts/NFTs.scss
+++ b/src/components/mypage/nfts/NFTs.scss
@@ -15,7 +15,21 @@
     font-size: 14px;
     padding: 8px;
     position: relative;
-
+    font{
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+      word-spacing: inherit !important;
+      font-variant: inherit !important;
+      text-transform: inherit !important;
+      text-rendering: inherit !important;
+      -webkit-font-smoothing: inherit !important; 
+      font-style: inherit !important;
+      font-family: inherit !important;
+    }
     &::after {
       content: '';
       width: 4px;
