영진 수정 - 마이프로필 글씨 150자 더보기 수정

--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -176,10 +176,10 @@
       color: #aaa;
       font-family: Pretendard400;
       font-size: 14px;
-      height: 16px;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
+      // height: 16px;
+      // overflow: hidden;
+      // white-space: nowrap;
+      // text-overflow: ellipsis;
       font{
         font-family: inherit !important;
         font-size: inherit !important;
