--- a/src/styles/EvaluationBegin.scss
+++ b/src/styles/EvaluationBegin.scss
@@ -196,6 +196,7 @@
           font-family: Pretendard600;
           font-size: 16px;
           margin: 8px;
+          min-height: 38px;
           font{
             font-family: inherit !important;
             font-size: inherit !important;
