영진 수정 - 마이프로필 글씨 150자 더보기 수정

--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -176,6 +176,7 @@
       color: #aaa;
       font-family: Pretendard400;
       font-size: 14px;
+      word-wrap: break-word;
       // height: 16px;
       // overflow: hidden;
       // white-space: nowrap;
