--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -39,17 +39,17 @@
       border-radius: 100%;
     }
     .profile__info--name-text {
-      font-family:  Pretendard400;
+      font-family: Pretendard400;
       font-size: 24px;
-        font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
-        }
+      font {
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
+      }
     }
     .profile__info--level {
       display: flex;
@@ -59,16 +59,16 @@
     .profile__info--level-text {
       color: #cf0;
       font-size: 12px;
-      font-family:  Pretendard400;
-        font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
-        }
+      font-family: Pretendard400;
+      font {
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
+      }
     }
     .profile__info--level-icon {
       width: 20px;
@@ -77,16 +77,16 @@
     .profile__info--level-rating {
       color: #aaa;
       font-size: 14px;
-      font-family:  Pretendard400;
-        font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
-        }
+      font-family: Pretendard400;
+      font {
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
+      }
     }
     .profile__record {
       display: flex;
@@ -99,10 +99,10 @@
       align-items: center;
     }
     .profile__record--item-title {
-      font-family:  Pretendard400;
+      font-family: Pretendard400;
       font-size: 12px;
       color: #f1f1f1;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -113,10 +113,10 @@
       }
     }
     .profile__record--item-value {
-      font:  Pretendard400;
+      font: Pretendard400;
       font-size: 14px;
       color: #aaa;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -131,6 +131,7 @@
       justify-content: space-between;
       gap: 16px;
       min-height: 21px;
+      align-items: center;
     }
     .profile__link {
       display: flex;
@@ -145,9 +146,9 @@
     }
     .profile__link--item {
       color: #5a9bf6;
-      font-family:  Pretendard400;
+      font-family: Pretendard400;
       font-size: 14px;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -161,7 +162,7 @@
       color: #f1f1f1;
       font-family: Pretendard400;
       font-size: 14px;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -177,11 +178,12 @@
       font-family: Pretendard400;
       font-size: 14px;
       word-wrap: break-word;
-      // height: 16px;
-      // overflow: hidden;
-      // white-space: nowrap;
-      // text-overflow: ellipsis;
-      font{
+      line-height: 1.4;
+      max-height: 1.4em; // 한 줄 높이로 제한
+      overflow: hidden;
+      white-space: nowrap; // 한 줄로 제한
+      text-overflow: ellipsis; // 말줄임표 표시
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -191,8 +193,10 @@
         letter-spacing: inherit !important;
       }
       &.open {
-        height: fit-content;
-        white-space: wrap;
+        max-height: none;
+        overflow: visible;
+        white-space: normal; // 여러 줄 허용
+        text-overflow: clip; // 말줄임표 제거
       }
     }
     .profile__desc--button {
@@ -200,7 +204,7 @@
       font-size: 14px;
       color: #f1f1f1;
       white-space: nowrap;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -218,7 +222,7 @@
       width: 100%;
       border-radius: 12px;
       color: #1a1a1a;
-      font-family:  Pretendard600;
+      font-family: Pretendard600;
       font-size: 16px;
       height: 40px;
       text-align: center;
@@ -227,7 +231,7 @@
       transition: 0.2s all;
       background-color: #cf0;
       top: 0;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -533,7 +537,7 @@
       border-radius: 12px 4px 12px 12px;
       background: var(--Color-03, #222);
       color: var(--Text-music-sub, #aaa);
-      font-family:  Pretendard500;
+      font-family: Pretendard500;
       font-size: 14px;
       font-style: normal;
       line-height: 100%; /* 14px */
@@ -545,7 +549,7 @@
         color: var(--Text-dark-title, #1a1a1a);
         background: var(--primary-base, #cf0);
       }
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
