영진 수정 - 라이센스 키 연동 부분 & 자기소개 더보기 버튼 추가

--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -600,6 +600,7 @@
       width: 100%;
       // height: 580px;
       .profile__info__btns{
+        margin-bottom: 8px;
         a{
           flex: 1;
         }
